--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -48,7 +48,7 @@
 					          		<div class="box box-danger">
 					            		<div class="box-body box-profile">
 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/totvs_logo.png" alt="TOTVS RM" />
-					              			<h3 class="profile-username text-center">TOTVS RM</h3>
+					              			<p class="text-muted text-center">TOTVS RM</p>
 											<a target="_blank" href="http://portalrm.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
 					            		</div>
 					            	</div>
@@ -57,7 +57,7 @@
 					          		<div class="box box-danger">
 					            		<div class="box-body box-profile">
 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/fluig_logo.png" alt="FLUIG" />
-					              			<h3 class="profile-username text-center">Fluig</h3>
+					              			<p class="text-muted text-center">Fluig</p>
 											<a target="_blank" href="http://aprovacao.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
 					            		</div>
 					            	</div>
@@ -68,7 +68,7 @@
 					          		<div class="box box-danger">
 					            		<div class="box-body box-profile">
 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/qlik_logo.png" alt="QlikView" />
-					              			<h3 class="profile-username text-center">QlikView</h3>
+					              			<p class="text-muted text-center">QlikView</p>
 											<a target="_blank" href="http://bi.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
 					            		</div>
 					            	</div>
@@ -77,7 +77,7 @@
 					          		<div class="box box-danger">
 					            		<div class="box-body box-profile">
 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/jcr-logo.png" alt="Chamados" />
-					              			<h3 class="profile-username text-center">Suporte</h3>
+					              			<p class="text-muted text-center">Suporte</p>
 											<a target="_blank" href="http://suporte.grupojcr.com.br/glpi/" class="btn btn-danger btn-block"><b>Acessar</b></a>
 					            		</div>
 					            	</div>
