--- a/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
+++ b/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
@@ -33,7 +33,7 @@
 					    </p:column>
 					 
 					    <p:column headerText="CNPJ" style="text-align:center;">
-					        <h:outputText value="#{coligada.cnpj}" />
+					        <h:outputText value="#{coligada.cnpjFormatado}" />
 					    </p:column>
 					    
 					</p:dataTable>
