--- a/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
@@ -44,10 +44,10 @@
 									<div class="form-group">
 										<label for="situacao" class="col-sm-2 col-md-2 control-label">Situação:</label>
 										<div class="col-sm-10 col-md-5" style="bottom: 10px;">
-											<p:selectOneRadio id="situacao" value="#{usuarioController.filtro.ativo}" styleClass="radio" layout="responsive" columns="3">
-											    <f:selectItem itemLabel="Todos" itemValue="3"  />
-											    <f:selectItem itemLabel="Ativo" itemValue="1" />
-											    <f:selectItem itemLabel="Inativo" itemValue="0" />
+											<p:selectOneRadio id="situacao" value="#{usuarioController.filtro.situacao}" styleClass="radio" layout="responsive" columns="3">
+											    <f:selectItem itemLabel="Todos" itemValue=""  />
+											    <f:selectItem itemLabel="Ativo" itemValue="true" />
+											    <f:selectItem itemLabel="Inativo" itemValue="false" />
 											</p:selectOneRadio>
 										</div>
 									</div>
@@ -111,7 +111,7 @@
 					    </p:column>
 					    
 					    <p:column headerText="Situação" style="text-align:center;">
-					        <span class="label label-#{usuario.situacao eq 'ATIVO' ? 'success' : 'danger' }">#{usuario.situacao.descricao}</span>
+					        <span class="label label-#{usuario.situacao ? 'success' : 'danger' }">#{usuario.situacao ? 'Ativo' : 'Inativo'}</span>
 					    </p:column>
 					    
 					</p:dataTable>
