--- a/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
+++ b/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
@@ -36,7 +36,7 @@
 					        <h:outputText value="#{coligada.cnpjFormatado}" />
 					    </p:column>
 					    
-					    <p:column headerText="CNPJ" style="text-align:center;">
+					    <p:column headerText="Ativar/Inativar" style="text-align:center;">
 					        <p:inputSwitch value="#{coligada.situacao}" onLabel="ATIVO" offLabel="INATIVO">
            						<p:ajax listener="#{coligadaController.ativarInativar(coligada)}" />
 					        </p:inputSwitch>
