--- a/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
@@ -61,8 +61,9 @@
 											id="btn_pesquisar"
 											process="@form"
 											action="#{usuarioController.pesquisar()}"
-											update=":gridForm"
-											ajax="true" />
+											update="@this, :gridForm"
+											ajax="true">
+											</p:commandButton>
 									</div>
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
@@ -88,8 +89,9 @@
 						binding="#{dataTableUtil.lazyDataTable}">
 						
 						<p:column headerText="Editar" style="text-align: center;">
-							<p:commandLink ajax="true" process="@this" action="#{usuarioController.editar()}" >
+							<p:commandLink ajax="true" process="@this" action="#{usuarioController.iniciarEditar()}" >
 								<h:outputText value="" title="Editar" styleClass="fa fa-pencil" />
+								<f:setPropertyActionListener value="#{usuario}" target="#{usuarioController.usuario}" />
 							</p:commandLink>
 						</p:column>
 						
