Solicitação de Compra

--- a/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
+++ b/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
@@ -12,7 +12,7 @@
 		<ui:param name="activeSubmenu" value="grupoCotacao"/>
     	<ui:param name="activeMenu" value="administrador"/>
 			
-    	<ui:define name="pageTitle"><i class="fa fa-home fa-1x cor-padrao"></i> Grupo de Cotação</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-pencil-square fa-1x cor-padrao"></i> Grupo de Cotação</ui:define>
     	<ui:define name="pageDescription">Editar</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
@@ -24,7 +24,7 @@
 	            		<div class="form-horizontal">
 							<div class="box-body">
 								<div class="form-group">
-									<div class="col-sm-2 col-md-2">
+									<div class="col-sm-2 col-md-2 control-label">
 										<label for="nome">Nome: *</label>
 									</div>
 
@@ -39,7 +39,7 @@
 				            		<div class="form-horizontal">
 										<div class="box-body">
 											<div class="form-group">
-												<div class="col-sm-2 col-md-2">
+												<div class="col-sm-2 col-md-2 control-label">
 													<label for="usuario">Usuário:</label>
 												</div>
 			
