--- a/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
@@ -15,7 +15,7 @@
 		<f:metadata>
 			<f:viewAction action="#{usuarioController.iniciarProcesso()}" />
 		</f:metadata>
-    	<ui:define name="pageTitle"><i class="fa fa-home fa-1x cor-padrao"></i> Usuários</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-users fa-1x cor-padrao"></i> Usuários</ui:define>
     	<ui:define name="pageDescription">Consultar</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
