--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -29,7 +29,9 @@
 											class="fa fa-shopping-cart"></i></span>
 	
 										<div class="info-box-content">
-											<span class="info-box-text acessoRapidoBox">Solicitação de Compra</span> 
+											<p:link href="/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Solicitação de Compra</span> 
+											</p:link>
 										</div>
 									</div>
 								</p:link>
