--- a/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
+++ b/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
@@ -15,7 +15,7 @@
 		<f:metadata>
 			<f:viewAction action="#{coligadaController.iniciarProcesso()}" />
 		</f:metadata>
-    	<ui:define name="pageTitle"><i class="fa fa-home fa-1x cor-padrao"></i> Coligadas</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-building fa-1x cor-padrao"></i> Coligadas</ui:define>
     	<ui:define name="pageDescription">Consultar</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
