--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -36,6 +36,20 @@
 									</div>
 								</p:link>
 							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="/pages/login/welcome.xhtml">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-green"><i
+											class="fa fa-wrench"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Abrir Chamado</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
 						</div>
 					</div>
 				</div>
