--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -22,7 +22,7 @@
 			              <h3 class="box-title">Acesso Rápido</h3>
 			            </div>
 						<div class="box-body">
-							<div class="col-md-4 col-sm-6 col-xs-12">
+							<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="false">
 								<p:link href="/pages/login/welcome.xhtml">
 									<div class="info-box" style="background-color: #f8f8f8;">
 										<span class="info-box-icon bg-red"><i
@@ -43,7 +43,7 @@
 											class="fa fa-wrench"></i></span>
 	
 										<div class="info-box-content">
-											<p:link href="/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml" ajax="false">
+											<p:link href="/pages/suporte/novo_chamado.xhtml" ajax="false">
 												<span class="info-box-text acessoRapidoBox">Abrir Chamado</span> 
 											</p:link>
 										</div>
