Solicitação de Compra

--- a/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
+++ b/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
@@ -29,7 +29,7 @@
 									</div>
 
 									<div class="col-sm-10 col-md-10">
-										<h:inputText id="nome" value="#{grupoCotacaoController.grupoCotacao.nome}" styleClass="form-control" />
+										<h:inputText id="nome" value="#{grupoCotacaoController.grupoCotacao.nome}" maxlength="100" styleClass="form-control" />
 									</div>
 								</div>
 								<p:panel toggleable="false" id="painelUsuarios" styleClass="box box-danger">
