--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -22,7 +22,7 @@
 			              <h3 class="box-title">Acesso Rápido</h3>
 			            </div>
 						<div class="box-body">
-							<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="false">
+							<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="true">
 								<p:link href="/pages/login/welcome.xhtml">
 									<div class="info-box" style="background-color: #f8f8f8;">
 										<span class="info-box-icon bg-red"><i
