--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
@@ -33,10 +33,10 @@
 										</div>
 	
 										<div class="col-sm-12 col-md-10">
-											<h:selectOneMenu id="selectColigada" styleClass="form-control" value="#{solicitacaoCompraController.solicitacaoCompraDTO.coligada}">
+											<p:selectOneMenu id="selectColigada" value="#{solicitacaoCompraController.solicitacaoCompraDTO.coligada}">
 									        	<f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="false" />
 									        	<f:selectItems value="#{solicitacaoCompraController.listaColigada}" var="coligada" itemLabel="#{coligada.razaoSocial} - (#{coligada.cnpjFormatado})" itemValue="#{coligada}" />
-									        </h:selectOneMenu>
+									        </p:selectOneMenu>
 										</div>
 									</div>
 									<div class="form-group">
@@ -59,10 +59,10 @@
 											</div>
 		
 											<div class="col-sm-12 col-md-10">
-												<h:selectOneMenu id="selectGrupoCotacao" styleClass="form-control" value="#{solicitacaoCompraController.solicitacaoCompraDTO.grupoCotacao}" rendered="#{solicitacaoCompraController.solicitacaoCompraDTO.possuiGrupoCotacao}">
+												<p:selectOneMenu id="selectGrupoCotacao" value="#{solicitacaoCompraController.solicitacaoCompraDTO.grupoCotacao}" rendered="#{solicitacaoCompraController.solicitacaoCompraDTO.possuiGrupoCotacao}">
 										        	<f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="false" />
 										        	<f:selectItems value="#{solicitacaoCompraController.listaGrupoCotacao}" var="gc" itemLabel="#{gc.nome}" itemValue="#{gc}" />
-										        </h:selectOneMenu>
+										        </p:selectOneMenu>
 											</div>
 										</div>
 									</p:outputPanel>
