--- a/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
+++ b/portaljcr/WebContent/pages/administrador/coligada/listar_coligada.xhtml
@@ -17,6 +17,10 @@
 		</f:metadata>
     	<ui:define name="pageTitle"><i class="fa fa-building fa-1x cor-padrao"></i> Coligadas</ui:define>
     	<ui:define name="pageDescription">Consultar</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-gears"></i> Configurações</li>
+	    	<li class="active"><i class="fa fa-building"></i> Coligadas</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="gridForm" acceptcharset="ISO-8859-1" lang="pt_BR">
