--- a/portaljcr/WebContent/pages/administrador/suporte/categoriaChamado/listar_categoriaChamado.xhtml
+++ b/portaljcr/WebContent/pages/administrador/suporte/categoriaChamado/listar_categoriaChamado.xhtml
@@ -17,6 +17,11 @@
 		</f:metadata>
     	<ui:define name="pageTitle"><i class="fa fa-list-ol fa-1x cor-padrao"></i> Categoria de Chamado</ui:define>
     	<ui:define name="pageDescription">Consultar</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-gears"></i> Configurações</li>
+	    	<li><i class="fa fa-wrench"></i> Chamados</li>
+	    	<li class="active"><i class="fa fa-list-ol"></i> Categorias de Chamado</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="gridForm" acceptcharset="ISO-8859-1" lang="pt_BR">
