--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
@@ -17,6 +17,10 @@
 		</f:metadata>
 			
     	<ui:define name="pageTitle"><i class="fa fa-cart-plus fa-1x cor-padrao"></i> Nova Solicitação</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-shopping-cart"></i> Solicitação de Compra</li>
+	    	<li class="active"><i class="fa fa-cart-plus"></i> Nova Solicitação</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="solicitacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
