--- a/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
+++ b/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
@@ -14,6 +14,10 @@
 			
     	<ui:define name="pageTitle"><i class="fa fa-pencil-square fa-1x cor-padrao"></i> Grupo de Cotação</ui:define>
     	<ui:define name="pageDescription">Editar</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-gears"></i> Configurações</li>
+	    	<li class="active"><i class="fa fa-pencil-square"></i> Grupos de Cotação</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="edicaoGrupoCotacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
