--- a/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
@@ -14,6 +14,10 @@
 			
     	<ui:define name="pageTitle"><i class="fa fa-users fa-1x cor-padrao"></i> Usuários</ui:define>
     	<ui:define name="pageDescription">Editar</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-gears"></i> Configurações</li>
+	    	<li class="active"><i class="fa fa-users"></i> Usuários</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="usuariosForm" acceptcharset="ISO-8859-1" lang="pt_BR">
