--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
@@ -13,6 +13,10 @@
     	<ui:param name="activeMenu" value="solicitacaoCompra"/>
     	
     	<ui:define name="pageTitle"><i class="fa fa-cart-plus fa-1x cor-padrao"></i> Nova Solicitação</ui:define>
+		<ui:define name="breadcrumb">
+			<li><i class="fa fa-shopping-cart"></i> Solicitação de Compra</li>
+	    	<li class="active"><i class="fa fa-cart-plus"></i> Nova Solicitação</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="solicitacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
