--- a/portaljcr/WebContent/pages/suporte/painel_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/painel_chamado.xhtml
@@ -17,6 +17,10 @@
 		</f:metadata>
     	
     	<ui:define name="pageTitle"><i class="fa fa-plus-square fa-1x cor-padrao"></i> Painel de Chamados</ui:define>
+    	<ui:define name="breadcrumb">
+			<li><i class="fa fa-wrench"></i> Suporte TI</li>
+	    	<li class="active"><i class="fa fa-reorder"></i> Painel de Chamados</li>
+		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
 				<h:form id="chamadoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
