--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -16,7 +16,7 @@
     	<ui:define name="pageDescription">Pagina Inicial</ui:define>
 		<ui:define name="body">
 			<div class="row">
-        		<div class="col-md-9">
+        		<div class="col-md-12">
 					<div class="box box-danger">
 						<div class="box-header with-border">
 			              <h3 class="box-title">Acesso Rápido</h3>
@@ -53,55 +53,55 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
-					<div class="box box-danger">
-						<div class="box-header with-border">
-		            		<h3 class="box-title">Links Externos</h3>
-			            </div>
-						<div class="box-body">
-							<div class="row">
-					        	<div class="col-md-6">
-					          		<div class="box box-danger">
-					            		<div class="box-body box-profile">
-					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/totvs_logo.png" alt="TOTVS RM" />
-					              			<p class="text-muted text-center">TOTVS RM</p>
-											<a target="_blank" href="http://portalrm.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
-					            		</div>
-					            	</div>
-					          	</div>
-					          	<div class="col-md-6">
-					          		<div class="box box-danger">
-					            		<div class="box-body box-profile">
-					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/fluig_logo.png" alt="FLUIG" />
-					              			<p class="text-muted text-center">Fluig</p>
-											<a target="_blank" href="http://aprovacao.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
-					            		</div>
-					            	</div>
-					          	</div>
-					        </div>
-					        <div class="row">
-					        	<div class="col-md-6">
-					          		<div class="box box-danger">
-					            		<div class="box-body box-profile">
-					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/qlik_logo.png" alt="QlikView" />
-					              			<p class="text-muted text-center">QlikView</p>
-											<a target="_blank" href="http://bi.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a>
-					            		</div>
-					            	</div>
-					          	</div>
-					          	<div class="col-md-6">
-					          		<div class="box box-danger">
-					            		<div class="box-body box-profile">
-					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/jcr-logo.png" alt="Chamados" />
-					              			<p class="text-muted text-center">Suporte</p>
-											<a target="_blank" href="http://suporte.grupojcr.com.br/glpi/" class="btn btn-danger btn-block"><b>Acessar</b></a>
-					            		</div>
-					            	</div>
-					          	</div>
-					        </div>
-						</div>
-					</div>
-				</div>
+<!-- 				<div class="col-md-3"> -->
+<!-- 					<div class="box box-danger"> -->
+<!-- 						<div class="box-header with-border"> -->
+<!-- 		            		<h3 class="box-title">Links Externos</h3> -->
+<!-- 			            </div> -->
+<!-- 						<div class="box-body"> -->
+<!-- 							<div class="row"> -->
+<!-- 					        	<div class="col-md-6"> -->
+<!-- 					          		<div class="box box-danger"> -->
+<!-- 					            		<div class="box-body box-profile"> -->
+<!-- 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/totvs_logo.png" alt="TOTVS RM" /> -->
+<!-- 					              			<p class="text-muted text-center">TOTVS RM</p> -->
+<!-- 											<a target="_blank" href="http://portalrm.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a> -->
+<!-- 					            		</div> -->
+<!-- 					            	</div> -->
+<!-- 					          	</div> -->
+<!-- 					          	<div class="col-md-6"> -->
+<!-- 					          		<div class="box box-danger"> -->
+<!-- 					            		<div class="box-body box-profile"> -->
+<!-- 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/fluig_logo.png" alt="FLUIG" /> -->
+<!-- 					              			<p class="text-muted text-center">Fluig</p> -->
+<!-- 											<a target="_blank" href="http://aprovacao.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a> -->
+<!-- 					            		</div> -->
+<!-- 					            	</div> -->
+<!-- 					          	</div> -->
+<!-- 					        </div> -->
+<!-- 					        <div class="row"> -->
+<!-- 					        	<div class="col-md-6"> -->
+<!-- 					          		<div class="box box-danger"> -->
+<!-- 					            		<div class="box-body box-profile"> -->
+<!-- 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/qlik_logo.png" alt="QlikView" /> -->
+<!-- 					              			<p class="text-muted text-center">QlikView</p> -->
+<!-- 											<a target="_blank" href="http://bi.grupojcr.com.br" class="btn btn-danger btn-block"><b>Acessar</b></a> -->
+<!-- 					            		</div> -->
+<!-- 					            	</div> -->
+<!-- 					          	</div> -->
+<!-- 					          	<div class="col-md-6"> -->
+<!-- 					          		<div class="box box-danger"> -->
+<!-- 					            		<div class="box-body box-profile"> -->
+<!-- 					              			<img class="profile-user-img img-responsive img-circle" src="../../resources/images/jcr-logo.png" alt="Chamados" /> -->
+<!-- 					              			<p class="text-muted text-center">Suporte</p> -->
+<!-- 											<a target="_blank" href="http://suporte.grupojcr.com.br/glpi/" class="btn btn-danger btn-block"><b>Acessar</b></a> -->
+<!-- 					            		</div> -->
+<!-- 					            	</div> -->
+<!-- 					          	</div> -->
+<!-- 					        </div> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
 			</div>
 		</ui:define>
 	</ui:composition>
