--- a/portaljcr/WebContent/pages/suporte/exibir_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/exibir_chamado.xhtml
@@ -43,11 +43,11 @@
 													</div>
 													
 													<div class="col-sm-2 col-md-2 control-label">
-														<label for="responsavel">Responsável:</label>
+														<label jsf:rendered="#{chamadoController.chamado.usuarioResponsavel != null}" for="responsavel">Responsável:</label>
 													</div>
 				
 													<div class="col-sm-4 col-md-4">
-														<p:outputLabel id="responsavel" value="#{chamadoController.chamado.usuarioResponsavel.nome}" styleClass="control-label font-normal" />
+														<p:outputLabel id="responsavel" value="#{chamadoController.chamado.usuarioResponsavel.nome}" styleClass="control-label font-normal" rendered="#{chamadoController.chamado.usuarioResponsavel != null}" />
 													</div>
 												</div>
 												<div class="form-group">
