--- a/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
@@ -95,7 +95,7 @@
 										    		fileUploadListener="#{chamadoController.doUpload}" 
 										    		update="@form:painelAnexos"
 										    		dragDropSupport="true"
-						                       		allowTypes="/(\.|\/)(jpg|JPG|gif|GIF|png|PNG|pdf|PDF|doc|docx|xls|xlsx)$/" 
+						                       		allowTypes="/(\.|\/)(jpg|JPG|jpeg|JPEG|gif|GIF|png|PNG|pdf|PDF|doc|docx|xls|xlsx)$/" 
 						                       		sizeLimit="2000000"
 						                       		invalidFileMessage="Arquivo inválido! (Formatos Aceitos: JPG, PNG, GIF, PDF, DOC, XLS)" 
 						                       		invalidSizeMessage="Tamanho do arquivo não permitido! (Máximo 2MB)"
