--- a/portaljcr/WebContent/pages/suporte/listar_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/listar_chamado.xhtml
@@ -102,7 +102,7 @@
 					    </p:column>
 						
 					    <p:column headerText="Situação" style="text-align:center;font-size:12px;">
-					    	<span class="label label-#{chamado.situacao eq 'ABERTO' ? 'success' : chamado.situacao eq 'EM_ANDAMENTO' ? 'warning' : chamado.situacao eq 'RESOLVIDO' ? 'info' : 'default' }">#{chamado.situacao.descricao.toUpperCase()}</span>
+					    	<span class="label label-#{chamado.situacao eq 'ABERTO' ? 'success' : chamado.situacao eq 'EM_ANDAMENTO' ? 'warning' : chamado.situacao eq 'RESOLVIDO' ? 'info' : 'danger' }">#{chamado.situacao.descricao.toUpperCase()}</span>
 					    </p:column>
 					    
 					    <p:column headerText="Data de Abertura" style="text-align:center;font-size:12px;" >
